# Simulators

./: README.md
.github/workflows/: build-on-release.yml
simulator-wizard-project/: .gitignore  pyproject.toml
simulator-wizard-project/simulator_wizard/: __main__.py  cli.py  wizard.py
simulator_framework/: .gitignore  Cargo.toml  build.ps1
simulator_framework - Copy/: build.ps1
simulator_framework - Copy/plugin_interface/src/: lib.rs
simulator_framework - Copy/plugin_manager/: Cargo.toml
simulator_framework - Copy/plugins/bna/: Cargo.toml
simulator_framework - Copy/src-tauri/: Cargo.toml  tauri-bna.conf.json
simulator_framework/assets/asset-barcode/: config.json  index.html  script.js  styles.css
simulator_framework/assets/asset-bna/: config.json  index.html  script.js
simulator_framework/plugin_interface/: Cargo.toml
simulator_framework/plugin_interface/src/: lib.rs
simulator_framework/plugin_manager/src/: lib.rs
simulator_framework/plugins/barcode/: Cargo.toml
simulator_framework/plugins/barcode/src/: lib.rs
simulator_framework/plugins/bna/src/: lib.rs
simulator_framework/plugins/card/: Cargo.toml
simulator_framework/plugins/card/src/: lib.rs
simulator_framework/plugins/default/: Cargo.toml
simulator_framework/plugins/default/src/: lib.rs
simulator_framework/src-tauri/: Cargo.toml  tauri-barcode.conf.json  tauri-card.conf.json  tauri.conf.json
simulator_framework/src-tauri/src/: communication.rs  lib.rs  main.rs  plugin_manager.rs
simulator_framework/src/assets/: config.json
