[build-system]
requires=["poetry-core>=1.8.0"]		
build-backend= "poetry.core.masonry.api"

[tool.poetry]
name="simulator_wizard"
version="1.0.0"
description="A CLI wizard for creating new simulator"
authors = ["gipi"]
license = "MIT"

[tool.poetry.dependencies]
python="^3.12"
click = "^8.0.0"

[tool.poetry.scripts]
createsim = "simulator_wizard.cli:cli"
simulatorwizard="simulator_wizard.__main__:main"

[tool.poetry.dev-dependencies]
pytest = "^6.2.1"