[package]
name = "barcode_plugin"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
my_tauri_framework = { path = "../../src-tauri" } # Adjusted path to framework
